[package]
name = "boosting_stacking_and_bagging_for_ensemble_models_for_time_series_analysis_with_python_rs"
description = "Python bindings (PyO3) for boosting_stacking_and_bagging_for_ensemble_models_for_time_series_analysis_with_python_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "boosting_stacking_and_bagging_for_ensemble_models_for_time_series_analysis_with_python_rs"
crate-type = ["cdylib"]

[dependencies]
boosting_stacking_and_bagging_for_ensemble_models_for_time_series_analysis_with_python_core = { path = "../core" }
pyo3 = { version = "0.28", features = ["extension-module"] }
numpy = "0.28"
